--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 </code></pre>
 
 <h2>
+<a name="screencast" class="anchor" href="#screencast"><span class="octicon octicon-link"></span></a>Screencast</h2>
+
+<p><iframe src="http://showterm.io/2fc927bf490e97b5df9c6#fast" width="100%" height="480" frameborder="0"></iframe></p>
+
+<h2>
 <a name="quick-start" class="anchor" href="#quick-start"><span class="octicon octicon-link"></span></a>Quick start</h2>
 
 <p><strong>Show all available commands</strong></p>
